# benchmark-df

./: .gitignore  BUILD  MODULE.bazel  README.md  benchmark.py  pandas_ops.py  polars_ops.py  requirements.txt
helpers/: time_decorator.py
src/: BUILD
src/helpers/: BUILD
